# alibiCTF

./: .gitignore  README.md
websites/sqli_practice/: Cargo.toml  challenge.db
websites/sqli_practice/src/: main.rs
websites/sqli_practice/templates/: 404.html  index.css  index.html  sql1.css  sql1.html
websites/tailwindui-salient/src/components/: Header.jsx  PrimaryFeatures.jsx
websites/tailwindui-salient/src/pages/: login.jsx
