[package]
name = "sqli_practice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = { version= "0.11.1", features= ["mime", "mime_guess"]}
axum-core= "0.3"
axum = "0.6.9"
hyper = { version = "0.14.24", features = ["full"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
tokio = { version = "1.26.0", features = ["full"] }
tower = { version= "0.4.13", features = ["util"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
axum-macros = "0.3.4"
tower-http = { version = "0.4.0", features = ["cors"] }
sqlite = "0.30.4"
